<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Code Ezy</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_score">High Score</string>
    <string name="title_activity_play">Play</string>
    <string name="title_activity_menu">Menu</string>
	
	<string name="str_settings">Settings</string>
    <string name="str_credits">Instructions</string>
    <string name="str_info">Info</string>
    <string name="str_score">High Score</string>
    <string name="str_play">Play</string>
    <string name="str_quit">Quit</string>
    <string name="msg_instruction">Sort the tags in proper order. Drag star to sort items on the screen.</string>
    <string name="msg_contact">For more contact at: asfandahmed1@gmail.com</string>
</resources>
