<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
	<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal" >
    	
            <ImageView
        android:id="@+id/imageView1"
        android:layout_width="96dp"
        android:layout_height="119dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="play"
        android:text="@string/str_play" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="high_score"
        android:text="@string/str_score" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="settings"
        android:text="@string/str_settings" />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="credits"
        android:text="@string/str_credits" />

    <Button
        android:id="@+id/button5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="quit"
        android:text="@string/str_quit" />
        
    </LinearLayout>
    </ScrollView>
</LinearLayout>